--- a/App/WebApp.csproj
+++ b/App/WebApp.csproj
@@ -43,10 +43,10 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj" />
+    <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Model\" />
+    <ProjectReference Include="..\ClassLibrary\DataEntities.csproj" />
   </ItemGroup>
 
 </Project>
