--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -24,7 +24,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj" />
+    <ProjectReference Include="..\ClassLibrary\DataEntities.csproj" />
   </ItemGroup>
 
 </Project>
